@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2011,v 1.1169 2011/05/16 13:22:06 taca Exp $
+$NetBSD: CHANGES-2011,v 1.1170 2011/05/16 13:29:38 abs Exp $
 
 Changes to the packages collection and infrastructure in 2011:
 
@@ -1908,3 +1908,4 @@ Changes to the packages collection and infrastructure in 2011:
 	Updated net/pear-Net_SMTP to 1.5.2 [taca 2011-05-16]
 	Updated graphics/pear-Image_Color to 1.0.4nb1 [taca 2011-05-16]
 	Updated graphics/pear-Image_Canvas to 0.3.3 [taca 2011-05-16]
+	Removed sysutils/p5-Ocsinventory-Agent successor net/ocsinventory-agent [abs 2011-05-16]
